the ".do" prefix as described below; other features are available by
default since they should not normally create compatibility problems.
With the "-X" option, all extensions except for locale-dependent input
are disabled.

.chop name
	removes the last character of the macro, string, or diversion
	"name".

.de longname
.ds longname
.nr longname
	The names of macros, strings, and number registers can be longer
	than two characters now with the "-x" option.

.do request arguments
	has the same effect as executing ".request arguments" with the
	"-x" option enabled, even if that was not given on the command
	line.  Thus ".do papersize a4" works like ".papersize a4",
	".do de longname" defines a macro with a long name, and
	".do longname" executes it. It is possible to contract extended
	request names without the "-x" option, such as ".dopapersize",
	although such usage seems questionable.

.ev name
	Environments can be named, or be given an arbitrary number.

.evc name
	copies the environment "name" into the current environment.
	The temporary state of the current environment is reset, and
	incompletely filled lines are discarded.

.fallback ff aa bb ...					troff only
	selects the fallback sequence for font ff. If the current font
	is ff and a character is not found, font aa is searched first,
	then font bb, etc. If the character still has not been found,
	it is searched for in font S, then in font 0, 1, and so forth.

.flig ff ligatures					troff only
	defines the set of ligatures to be used with font ff. The
	"ligatures" parameter is the sum of the values 1 for ff, 2 for
	fi, 4 for fl, 8 for ffi, and 16 for ffl. Thus ".flig R 31"
	enables all these ligatures in font R. The default is specific
	to a font and is determined from its AFM file. Enabling the ff,
	ffi, and ffl ligatures with PostScript fonts usually requires
	an expert font that has been selected for character substitution
	using the ".fallback" request.

.fpost r yy afmname [supplyname]			troff only